--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,2 +1,11 @@
-. {
+.cards__text {
+  font-weight: bold;
+  margin: 0 0 34px;
+}
+.cards__list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
