add modal form html and styling for add clothes button

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,6 +16,7 @@
   margin-right: 20px;
   border: none;
   background-color: transparent;
+  cursor: pointer;
 }
 .header__user-container {
   display: flex;
