--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,9 @@
 .page {
   background-color: #f3f3f3;
+  font-family: "Cabinet Grotesk", Arial, sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.2;
 }
 .page__content {
   max-width: 1360px;
