add mobile responsive design

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,3 +9,8 @@
   max-width: 1360px;
   margin: 0 auto;
 }
+@media screen and (max-width: 375px) {
+  .page__content {
+    padding: 18px 16px 20px;
+  }
+}
