--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -7,5 +7,33 @@
   padding: 0;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 20px;
+}
+.cards__randomize-btn {
+  display: none;
+}
+@media screen and (max-width: 375px) {
+  .cards__text {
+    margin: 0 0 20px;
+  }
+  .cards__list {
+    gap: 15px;
+  }
+  .cards__randomize-btn {
+    cursor: pointer;
+    display: block;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    height: 44px;
+    width: 100%;
+    padding: 0;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+  }
 }
