--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -9,6 +9,7 @@
   position: relative;
   border-radius: 19px;
   overflow: hidden;
+  cursor: pointer;
 }
 .card__title {
   margin: 0;
@@ -24,4 +25,11 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+@media screen and (max-width: 375px) {
+  .card__container {
+    width: 164px;
+    height: 164px;
+  }
 }
