--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -33,7 +33,8 @@
   position: absolute;
   top: 20px;
   right: 28px;
-  background-image: url(../../assets/close-btn.svg);
+  background-image: url(../../assets/close-btn-dark.svg);
+  opacity: 0.3;
   background-repeat: no-repeat;
   background-size: 16px 16px;
   width: 20px;
@@ -92,4 +93,19 @@
 }
 .modal__submit:hover {
   background-color: #00000099;
+}
+@media screen and (max-width: 375px) {
+  .modal {
+    z-index: 2;
+  }
+  .modal__close {
+    background-size: cover;
+    background-position: center;
+    width: 20px;
+    height: 20px;
+    right: 20px;
+  }
+  .modal__submit {
+    width: 100%;
+  }
 }
