--- a/src/components/WeatherCard/WeatherCard.css
+++ b/src/components/WeatherCard/WeatherCard.css
@@ -14,9 +14,17 @@
   left: 16px;
   font-size: 36px;
   line-height: 40px;
+  color: #fff;
 }
 .weather-card__image {
   width: 100%;
   object-fit: cover;
   object-position: top right;
+}
+
+@media screen and (max-width: 375px) {
+  .weather-card {
+    margin: 16px 0 32px;
+    z-index: 0;
+  }
 }
