--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -9,9 +9,13 @@
   justify-content: center;
   align-items: center;
   visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.2s, opacity 0.2s linear;
 }
 .modal_opened {
   visibility: visible;
+  transition-delay: 0s;
+  opacity: 1;
 }
 .modal__content {
   position: relative;
