add profile page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,7 +8,7 @@
 .page__content {
   max-width: 1360px;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 32px 40px 24px;
 }
 @media screen and (max-width: 375px) {
   .page__content {
