--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,8 +4,8 @@
   justify-content: space-between;
 }
 .footer__text {
-  margin: 85px 0 24px;
   padding: 0;
+  margin: 0;
 }
 @media screen and (max-width: 375px) {
   .footer__text {
