--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -5,12 +5,13 @@
 
 .clothes-section__title {
   display: flex;
+  margin: 16px 0;
   gap: 20px;
   font-size: 20px;
 }
 
 .clothes-section__text {
-  margin: 16px 0;
+  margin: 0;
 }
 
 .clothes-section__add-btn {
