--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,8 @@
 .header {
   display: flex;
   align-items: center;
-  padding: 32px 0 28px;
+  padding: 0;
+  font-size: 20px;
 }
 .header__logo {
   width: 89px;
@@ -13,10 +14,12 @@
 }
 .header__nav {
   display: flex;
+  gap: 20px;
+  align-items: center;
   margin-left: auto;
 }
 .header__add-clothes-btn {
-  margin-right: 20px;
+  font-weight: 700;
   border: none;
   background-color: transparent;
   cursor: pointer;
@@ -32,6 +35,7 @@
 }
 .header__username {
   margin: 0;
+  text-decoration: none;
 }
 .header__avatar {
   width: 40px;
