--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -29,3 +29,13 @@
   flex-wrap: wrap;
   gap: 20px;
 }
+
+@media screen and (max-width: 375px) {
+  .clothes-section__title {
+    margin: 20px 0;
+    justify-content: space-between;
+  }
+  .clothes-section__list {
+    gap: 15px;
+  }
+}
