--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -1,8 +1,25 @@
 .modal__content_type_preview {
+  position: relative;
+  max-width: 498px;
+  width: 100%;
+  background: #fff;
+  border: none;
+  box-sizing: border-box;
+  border-radius: 20px;
   padding: 0;
   overflow: hidden;
 }
 .modal__close_type_preview {
+  position: absolute;
+  top: 20px;
+  right: 28px;
+  background-repeat: no-repeat;
+  background-size: 16px 16px;
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
   background-image: url(../../assets/close-btn.svg);
   opacity: 1;
   transition: background-image 0.1s;
@@ -24,6 +41,15 @@
   margin-bottom: 12px;
   padding: 0;
   font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.modal__delete-btn {
+  font-size: 20px;
+  border: none;
+  background-color: transparent;
+  color: #ff4d00;
+  cursor: pointer;
 }
 .modal__weather {
   margin: 0;
