--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,10 +32,11 @@
   display: flex;
   align-items: center;
   gap: 12px;
+  text-decoration: none;
+  color: #000;
 }
 .header__username {
   margin: 0;
-  text-decoration: none;
 }
 .header__avatar {
   width: 40px;
