--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -69,6 +69,9 @@
   display: block;
   margin-top: 8px;
 }
+.modal__input:focus {
+  outline: none;
+}
 .modal__radio-buttons {
   padding: 0;
   margin: 0;
@@ -100,6 +103,19 @@
 }
 .modal__submit:hover {
   background-color: #00000099;
+}
+.modal__error {
+  color: #ff4d00;
+  border-color: #ff4d00;
+}
+.modal__error::placeholder {
+  color: #ff4d00;
+}
+.modal__disable {
+  opacity: 0.5;
+}
+.modal__disable:hover {
+  background-color: #000;
 }
 @media screen and (max-width: 375px) {
   .modal {
