--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -28,9 +28,10 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  justify-content: center;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 550px) {
   .clothes-section__title {
     margin: 20px 0;
     justify-content: space-between;
