--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -59,6 +59,7 @@
 .modal__label {
   display: flex;
   flex-wrap: wrap;
+  cursor: pointer;
 }
 .modal__input {
   border: none;
@@ -116,6 +117,9 @@
 }
 .modal__disable:hover {
   background-color: #000;
+}
+.modal__label:has(.modal__radio-input) {
+  margin-right: auto;
 }
 @media screen and (max-width: 550px) {
   .modal {
