--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -2,38 +2,78 @@
   display: flex;
   align-items: start;
   gap: 20px;
+  flex-direction: column;
+  margin-right: 20px;
+}
+.sidebar__user-container {
+  display: flex;
+  width: 100%;
+  gap: 20px;
+  overflow: hidden;
 }
 .sidebar__avatar {
   width: 56px;
   height: 56px;
+  border-radius: 50%;
+  flex-shrink: 0;
+}
+
+.sidebar__avatar-placeholder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  border: solid 1px rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 .sidebar__username {
   margin: 16px 0 0;
   font-weight: 700;
   font-size: 20px;
+  white-space: nowrap;
+  overflow-x: auto;
 }
-.sidebar__mobile-options {
-  margin-top: 12px;
-  visibility: hidden;
+.sidebar__options {
   display: flex;
-  gap: 8px;
   flex-direction: column;
   align-items: start;
+  gap: 8px;
+  font-size: 20px;
 }
-.sidebar__mobile-option {
+.sidebar__option {
+  font-weight: 700;
   border: none;
   background-color: transparent;
-  font-size: 20px;
-  color: #00000099;
   cursor: pointer;
+  transition: opacity 0.1s;
 }
+.sidebar__option:hover {
+  opacity: 0.7;
+}
+
 @media screen and (max-width: 550px) {
   .sidebar {
     border-top: solid 1px #0000004d;
     border-bottom: solid 1px #0000004d;
     padding: 20px 0;
+    align-items: center;
   }
-  .sidebar__mobile-options {
-    visibility: visible;
+  .sidebar__user-container {
+    width: auto;
+    max-width: 350px;
+  }
+  .sidebar__options {
+    margin-top: 12px;
+    display: flex;
+    gap: 8px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .sidebar__option {
+    border: none;
+    background-color: transparent;
+    font-size: 20px;
+    color: #00000099;
+    cursor: pointer;
   }
 }
