--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -16,10 +16,40 @@
   top: 15px;
   left: 50%;
   transform: translate(-50%);
-  padding: 2px 15px;
-  background-color: #fff;
-  border-radius: 4px;
   position: absolute;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.card__name {
+  color: #00000099;
+  background-color: #fff;
+  margin: 0;
+  padding: 2px 15px;
+  border-radius: 4px;
+}
+.card__like-btn {
+  background-image: url("../../assets/heart.svg");
+  background-color: transparent;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: none;
+  width: 18px;
+  height: 15px;
+  cursor: pointer;
+}
+.card__like-btn:hover {
+  opacity: 0.7;
+  scale: 1.3;
+  transition: 0.1s;
+}
+.card__like-btn_liked {
+  background-image: url("../../assets/heart-fill.svg");
+}
+.card__like-btn_liked:hover {
+  opacity: 0.7;
+  scale: 0.7;
+  transition: 0.1s;
 }
 .card__image {
   width: 100%;
