--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
   align-items: center;
   padding: 0;
   font-size: 20px;
+  position: relative;
 }
 .header__logo {
   width: 89px;
@@ -57,43 +58,57 @@
 .header__nav__close-btn {
   display: none;
 }
+.header__mobile-menu {
+  display: none;
+}
 
 @media screen and (max-width: 550px) {
-  .header {
-    position: relative;
-    padding: 0;
-    justify-content: start;
-    gap: 12px;
-  }
-
   .header__logo {
-    margin: 0;
+    margin-right: 12px;
   }
-
+  .header__mobile-nav-btn {
+    margin-left: auto;
+    cursor: pointer;
+    padding: 0;
+    display: block;
+    background-image: url("../../assets/mobile-menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 2px 8px #0000001a;
+    width: 100%;
+    max-width: 44px;
+    height: 44px;
+  }
   .header__date-location {
     font-size: 16px;
   }
-
   .header__nav {
+    border: solid 1px green;
+    visibility: visible;
+    display: none;
+  }
+  .header__mobile-menu {
+    top: 0;
+    padding: 60px 0 40px;
     z-index: 1;
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 8px #0000001a;
+    position: absolute;
+    display: flex;
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
     gap: 24px;
-    background-color: #fff;
-    position: absolute;
-    border-radius: 10px;
-    box-shadow: 0 2px 8px #0000001a;
-    max-width: 343px;
-    height: 208px;
-    width: 100%;
-    visibility: hidden;
   }
-
-  .header__nav_opened {
-    visibility: visible;
+  .header__mobile-auth-btns {
+    z-index: 2;
   }
-
   .header__nav__close-btn {
     display: block;
     position: absolute;
@@ -109,23 +124,6 @@
     right: 11px;
   }
   .header__user-container {
-    position: relative;
-  }
-
-  .header__mobile-nav-btn {
-    cursor: pointer;
-    position: absolute;
-    padding: 0;
-    display: block;
-    background-image: url("../../assets/mobile-menu.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    border: none;
-    border-radius: 10px;
-    background-color: #fff;
-    box-shadow: 0 2px 8px #0000001a;
-    width: 44px;
-    height: 44px;
-    right: 0;
+    margin-bottom: 24px;
   }
 }
